style: Fix spacing issues in buttons and card-header

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ button.mediatext:hover {
 
 i {
   color: gray;
+}
+li a i {
   margin-top: 8px;
 }
 i:hover {
